syntax = "proto3";

package ibc.applications.perm.v1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "ibc/applications/perm/v1/types.proto";

option go_package = "github.com/initia-labs/initia/x/ibc/perm/types";

// Query provides defines the gRPC querier service.
service Query {
  // ChannelRelayer queries a permissioned ibc relayer for the specific channel.
  rpc ChannelRelayer(QueryChannelRelayerRequest) returns (QueryChannelRelayerResponse) {
    option (google.api.http).get = "/ibc/apps/perm/v1/channel_relayer/{channel}";
  }
}

// QueryChannelRelayerRequest is the request type for the Query/ChannelRelayer RPC
// method
message QueryChannelRelayerRequest {
  // channel is ibc channel id.
  string channel = 1;
}

// QueryChannelRelayerResponse is the response type for the Query/ChannelRelayer RPC
// method.
message QueryChannelRelayerResponse {
  // class_trace returns the requested class id trace information.
  ChannelRelayer channel_relayer = 1;
}
